[package]
name = "canistergeek_ic_rust"
version = "0.3.2"
edition = "2021"
description = "A tool for Internet Computer to track your project canisters cycles and memory status."
license = "MIT"
repository = "https://github.com/usergeek/canistergeek_ic_rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.2"
serde = "1.0.147"
ic-cdk = "0.10.0"
chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"]}
#regex = "1.5.6"
