[package]
name = "canistergeek_ic_rust"
version = "0.4.3"
edition = "2021"
description = "A tool for Internet Computer to track your project canisters cycles and memory status."
license = "MIT"
repository = "https://github.com/usergeek/canistergeek_ic_rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.3"
serde = "1.0.196"
ic-cdk = "0.12.1"
chrono = {version = "0.4.33", default-features = false, features = ["clock", "std"]}
num-bigint = "0.4.4"
num-traits = "0.2.18"
#regex = "1.5.6"
